--- a/ido.css
+++ b/ido.css
@@ -32,10 +32,13 @@ table
 	border:outset;
 	margin-left: auto;
 	margin-right: auto;
+	width: 80%;
+	border: black solid 3px;
 }
 td{
 	padding: 0;
 	margin: 0;
+
 }
 hr
 {
