--- a/ido.css
+++ b/ido.css
@@ -66,3 +66,9 @@ input
 	color: #243f84;
 	text-transform: uppercase;
 }
+.szurke{
+	font-size: small;
+	text-align: center;
+	color:  #808183;
+	font-weight: bold;
+}
